--- a/Mustafa_Gulab_Mokashi.ipynb
+++ b/Mustafa_Gulab_Mokashi.ipynb
@@ -1,47 +1,33 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Mustafa_Gulab_Mokashi.ipynb",
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "q9y1hBSJB50Z"
       },
+      "outputs": [],
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
         "import sklearn"
-      ],
-      "execution_count": 1,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
       "metadata": {
         "id": "z7IBjeyOCmzj"
       },
+      "outputs": [],
       "source": [
         "from sklearn.datasets import load_boston\n",
         "df = load_boston()"
-      ],
-      "execution_count": 11,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -49,27 +35,27 @@
         "id": "blUuNDa8CwEC",
         "outputId": "06c5bf07-2cf8-4d03-f80e-1934891d5d2e"
       },
-      "source": [
-        "df.keys()"
-      ],
-      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "dict_keys(['data', 'target', 'feature_names', 'DESCR', 'filename'])"
             ]
           },
+          "execution_count": 12,
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df.keys()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -78,14 +64,8 @@
         "id": "d1sNmBzBD-P1",
         "outputId": "c06cfd7a-86b1-4470-8882-8a636b4f92bf"
       },
-      "source": [
-        "boston = pd.DataFrame(df.data, columns = df.feature_names)\n",
-        "boston.head()"
-      ],
-      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -217,15 +197,21 @@
               "[5 rows x 13 columns]"
             ]
           },
+          "execution_count": 13,
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "boston = pd.DataFrame(df.data, columns = df.feature_names)\n",
+        "boston.head()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -234,14 +220,8 @@
         "id": "0oTasN-oEhX4",
         "outputId": "eb8ccc05-6db0-4dcc-a9b0-1b73000e51da"
       },
-      "source": [
-        "boston['MEDV'] = df.target\n",
-        "boston.head()"
-      ],
-      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -379,15 +359,21 @@
               "[5 rows x 14 columns]"
             ]
           },
+          "execution_count": 14,
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "boston['MEDV'] = df.target\n",
+        "boston.head()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -396,13 +382,8 @@
         "id": "Rmw8V86EE8Dw",
         "outputId": "2361d2a4-9bf3-42d5-c2fe-87285c92c8cd"
       },
-      "source": [
-        "boston.isnull()"
-      ],
-      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -649,15 +630,20 @@
               "[506 rows x 14 columns]"
             ]
           },
+          "execution_count": 15,
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "boston.isnull()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -665,13 +651,8 @@
         "id": "zp-8Qh-eFNVW",
         "outputId": "0ff48fcf-c8aa-4ef9-8f19-345f21ab7219"
       },
-      "source": [
-        "boston.isnull().sum()"
-      ],
-      "execution_count": 16,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "CRIM       0\n",
@@ -691,15 +672,20 @@
               "dtype: int64"
             ]
           },
+          "execution_count": 16,
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "boston.isnull().sum()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -707,6 +693,18 @@
         "id": "QnlaWy6eFU-n",
         "outputId": "49ebcf6d-9d15-47ce-9b4d-a537638c2d96"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(430, 13)\n",
+            "(76, 13)\n",
+            "(430,)\n",
+            "(76,)\n"
+          ]
+        }
+      ],
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "\n",
@@ -719,35 +717,23 @@
         "print(X_test.shape)\n",
         "print(Y_train.shape)\n",
         "print(Y_test.shape)"
-      ],
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "(430, 13)\n",
-            "(76, 13)\n",
-            "(430,)\n",
-            "(76,)\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 18,
       "metadata": {
         "id": "17KbCBLiG9By"
       },
+      "outputs": [],
       "source": [
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.metrics import mean_squared_error"
-      ],
-      "execution_count": 18,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -755,28 +741,28 @@
         "id": "5jyJug26HOCG",
         "outputId": "ec0c4794-4be6-4ca9-ae9d-c5c76d12f447"
       },
-      "source": [
-        "lin_model = LinearRegression()\n",
-        "lin_model.fit(X_train, Y_train)"
-      ],
-      "execution_count": 19,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
             ]
           },
+          "execution_count": 19,
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "lin_model = LinearRegression()\n",
+        "lin_model.fit(X_train, Y_train)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -784,6 +770,20 @@
         "id": "TgibqRYRHvp5",
         "outputId": "52cc6d48-18df-4827-d444-490dddccc5e7"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "The model performance for training set\n",
+            "RMSE is 4.691577015539126\n",
+            "\n",
+            "\n",
+            "The model performance for testing set\n",
+            "RMSE is 4.685497050472062\n"
+          ]
+        }
+      ],
       "source": [
         "y_train_predict = lin_model.predict(X_train)\n",
         "rmse = (np.sqrt(mean_squared_error(Y_train, y_train_predict)))\n",
@@ -797,33 +797,31 @@
         "\n",
         "print(\"The model performance for testing set\")\n",
         "print('RMSE is {}'.format(rmse))"
-      ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "The model performance for training set\n",
-            "RMSE is 4.691577015539126\n",
-            "\n",
-            "\n",
-            "The model performance for testing set\n",
-            "RMSE is 4.685497050472062\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "P2wNkPVuKB4e"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "Mustafa_Gulab_Mokashi.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
